--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,5 @@
 TMDB_API_KEY=e7f8ad00eecc8f8af6dd88eac6522c74
+
+MONGO_URI=mongodb+srv://Jigs1188:<IIT@cse1>@cluster0.7hox8ih.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+PORT=5000
